@@ -1,5 +1,9 @@
 2007-12-03  Satoshi Nakagawa <artension@gmail.com>
 
+	Implementing log theme.
+
+2007-12-03  Satoshi Nakagawa <artension@gmail.com>
+
 	Preparing for log theme.
 
 2007-12-02  Satoshi Nakagawa <artension@gmail.com>
